# ear-blaster

./: .clangd  .gitignore  CMakeLists.txt  CREDITS.md  README.md
cpp/: CMakeLists.txt  globalkeylistener.cpp  globalkeylistener.h  main.cpp  translator.cpp  translator.h
cpp/audiosystem/: CMakeLists.txt  audiooutput.cpp  audiooutput.h  audioshared.h  audiosystem.cpp  audiosystem.h  microphonepassthrough.cpp  microphonepassthrough.h  soundeffect.cpp  soundeffect.h  texttospeech.cpp  texttospeech.h
i18n/: ear-blaster_en.ts  ear-blaster_pl.ts
qml/: AppSettings.qml  AudioDeviceSelect.qml  CustomButton.qml  Main.qml  MainScreen.qml  SequenceInput.qml  SettingsScreen.qml  SoundElement.qml  SoundList.qml  VolumeInput.qml  main.qml
qml/components/: AudioDeviceSelect.qml  SoundElement.qml  SoundList.qml  VolumeInput.qml
resources/: icon.rc
source/: configmanager.cpp  configmanager.h  globalkeylistener.cpp  globalkeylistener.h  main.cpp  soundplayer.cpp  soundplayer.h
source/audiosystem/: audiodevice.cpp  audiodevice.h  audiosystem.cpp  audiosystem.h  microphonepassthrough.cpp  microphonepassthrough.h  soundeffect.cpp  soundeffect.h
ui/: CMakeLists.txt  Main.qml  MainScreen.qml  SettingsScreen.qml
ui/components/: AudioDeviceSelect.qml  CMakeLists.txt  SequenceInput.qml  SoundElement.qml  SoundList.qml  VolumeInput.qml
ui/settings/: AppSettings.qml  CMakeLists.txt  SettingConnections.qml
